# gloo-muckrock

./: .gitignore  README.md  env.example  gloo.yaml  pyproject.toml
app/: __init__.py  playground.ipynb  process_request.py
app/gloo/: tasks.yaml  types.py
app/gloo/task_classify_movie_genre/: __init__.py
app/gloo/task_classify_movie_genre/v0/: generated.py  task.py
app/gloo/task_process_request/: __init__.py
app/gloo/task_process_request/v0/: generated.py  task.py  test_task.py
app/gloo/task_process_request/v1/: generated.py  task.py  test_task.py
app/gloo/task_search_documents/: __init__.py
app/gloo/task_search_documents/v0/: generated.py  task.py
app/gloo/task_summarize/: __init__.py
app/gloo/task_summarize/v0/: generated.py  task.py  test_task.py
gloo/: llm-clients.gloo  process-request-test-fn.gloo
gloo/functions/: extract-status.gloo  summarize.gloo
gloo/tests/: estimated_dates.gloo  status_done.gloo  status_fix.gloo  status_indeterminate.gloo  status_no_docs.gloo  status_other.gloo  status_partial.gloo  status_payment.gloo  status_processed.gloo  status_rejected.gloo  tracking_numbers.gloo
