[tool.poetry]
name = "gloo-muckrock"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
gloo-lib = "^1.1.21"
tiktoken = "^0.5.1"

[tool.poetry.group.analytics.dependencies]
ipykernel = "^6.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
np = "^1.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"
python-dotenv = {extras = ["cli"], version = "^1.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
